--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">AutoPay</string>
     <string name="title_activity_maps">Map</string>
+    <string name="radio_male">Male</string>
+    <string name="radio_female">Female</string>
 </resources>
