--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_activity_maps">Map</string>
     <string name="radio_male">Male</string>
     <string name="radio_female">Female</string>
+    <string name="google_map_key">AIzaSyArJzFNe1UoSEVHCjaAmEL9zVZKv8Nrkj8</string>
 </resources>
